<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <TextView
        android:id="@+id/psnl_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="Edit Personal Info"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_profile"/>

    <Button
        android:id="@+id/changepic"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/profilepic"
        android:textColor="@color/black"
        android:background="@color/grey" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4" >

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fullName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/namefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/emailfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="200dp" />

        <TextView
            android:id="@+id/mobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mobileNumber"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/mobilefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/pswdfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="20dp" />

    </GridLayout>

    <Button
        android:id="@+id/updatebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/updatepro"
        android:textColor="@color/black"
        android:background="@color/grey"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</LinearLayout>