<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="Bicycle Listing Form"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/q0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bikename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="2020 Nitro Supercycle "
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/q1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/typeofbike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Road Bicycle"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="10dp"
            android:text="@string/q2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/riderht"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="150"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/q3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hourrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hourly Rate : $7 average"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dayrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Daily Rate : $17 average"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weekrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Weekly Rate : $70 average"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/q4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Street"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/cityprovince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City, State/Province"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Zip Code"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/submitbike"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/grey"
                android:padding="15dp"
                android:text="@string/bikeformbtn"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goback"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/grey"
                android:padding="15dp"
                android:text="@string/gobackbtn"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </GridLayout>

    </LinearLayout>

</ScrollView>